--- a/package.json
+++ b/package.json
@@ -8,19 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
-    "date-fns": "^2.19.0",
-    "gray-matter": "^4.0.2",
-    "next": "^10.0.0",
+    "bootstrap": "^5.0.1",
+    "date-fns": "^2.21.3",
+    "gray-matter": "^4.0.3",
+    "next": "^10.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
-    "sass": "^1.32.8"
+    "sass": "^1.32.13"
   },
   "devDependencies": {
     "@tailwindcss/jit": "0.1.3",
     "autoprefixer": "^10.0.4",
-    "postcss": "^8.1.10",
-    "tailwindcss": "^2.0.2"
+    "postcss": "^8.2.15",
+    "tailwindcss": "^2.1.2"
   }
 }
