--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
   },
   "dependencies": {
     "bootstrap": "^5.0.1",
-    "date-fns": "^2.21.3",
+    "date-fns": "^2.22.1",
     "gray-matter": "^4.0.3",
-    "next": "^10.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "next": "^11.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
-    "sass": "^1.32.13"
+    "sass": "^1.35.0"
   },
   "devDependencies": {
     "@tailwindcss/jit": "0.1.3",
-    "autoprefixer": "^10.0.4",
-    "postcss": "^8.2.15",
-    "tailwindcss": "^2.1.2"
+    "autoprefixer": "^10.2.6",
+    "postcss": "^8.3.4",
+    "tailwindcss": "^2.1.4"
   }
 }
