--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "bootstrap": "^5.1.0",
     "date-fns": "^2.23.0",
     "gray-matter": "^4.0.3",
+    "gsap": "^3.7.1",
     "next": "^11.1.2",
     "next-themes": "0.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
-    "sass": "^1.38.2"
+    "sass": "^1.38.2",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.3",
