--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "date-fns": "^2.25.0",
     "gray-matter": "^4.0.3",
     "gsap": "^3.8.0",
+    "kbar": "0.1.0-beta.21",
     "next": "^12.0.0",
     "next-themes": "0.0.15",
     "react": "^17.0.2",
@@ -36,8 +37,12 @@
     "swr": "^1.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.3.7",
-    "postcss": "^8.3.11",
-    "tailwindcss": "^2.2.17"
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.3.0",
+    "@tailwindcss/typography": "^0.5.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.4",
+    "tailwindcss": "^3.0.0"
   }
 }
