--- a/package.json
+++ b/package.json
@@ -21,36 +21,34 @@
   },
   "homepage": "https://github.com/educlopez/nextjs-blog#readme",
   "dependencies": {
-    "@headlessui/react": "^1.4.1",
+    "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.5",
-    "bootstrap": "^5.1.3",
-    "date-fns": "^2.25.0",
+    "classnames": "2.3.1",
+    "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
-    "gsap": "^3.8.0",
-    "kbar": "0.1.0-beta.21",
-    "next": "^12.0.0",
-    "next-themes": "0.0.15",
+    "kbar": "^0.1.0-beta.27",
+    "next": "^12.1.0",
+    "next-themes": "^0.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remark": "^13.0.0",
-    "remark-html": "^13.0.2",
-    "sass": "^1.43.3",
-    "swr": "^1.0.1"
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
+    "sass": "^1.49.8",
+    "swr": "^1.2.2"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.4.0",
-    "@tailwindcss/line-clamp": "^0.3.0",
-    "@tailwindcss/typography": "^0.5.0",
-    "autoprefixer": "^10.4.0",
-    "eslint": "^7.32.0",
-    "eslint-config-next": "12.0.7",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.2.0",
-    "eslint-plugin-react": "^7.28.0",
-    "postcss": "^8.4.4",
-    "tailwindcss": "^3.0.0"
-  }
+    "@tailwindcss/line-clamp": "^0.3.1",
+    "@tailwindcss/typography": "^0.5.2",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
+    "prettier": "^2.5.1",
+    "tailwindcss": "^3.0.23"
+  },
+  "engines": {
+    "npm": ">=7.0.0",
+    "node": ">=14.0.0"
+  },
+  "packageManager": "npm@8.1.3"
 }
