--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.5",
+    "@popperjs/core": "^2.11.3",
     "classnames": "2.3.1",
     "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
@@ -31,6 +32,7 @@
     "next-themes": "^0.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-popper": "^2.2.5",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "sass": "^1.49.8",
