--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mdx-js/react": "^2.1.5",
     "@next/mdx": "^13.0.2",
     "@tailwindcss/typography": "^0.5.4",
+    "@vercel/analytics": "^0.1.4",
     "autoprefixer": "^10.4.12",
     "clsx": "^1.2.1",
     "fast-glob": "^3.2.11",
