--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next/mdx": "^13.0.2",
     "@tailwindcss/typography": "^0.5.4",
     "@vercel/analytics": "^0.1.4",
+    "@vercel/og": "^0.0.20",
     "autoprefixer": "^10.4.12",
     "clsx": "^1.2.1",
     "fast-glob": "^3.2.11",
