--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "node ./scripts/generate-sitemap.mjs",
     "start": "next start",
     "lint": "next lint"
   },
@@ -23,6 +24,7 @@
     "fast-glob": "^3.2.11",
     "feed": "^4.2.2",
     "focus-visible": "^5.2.0",
+    "globby": "^13.1.2",
     "next": "13.0.2",
     "postcss-focus-visible": "^6.0.4",
     "react": "18.2.0",
