--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "edardou-portfolio",
-  "version": "2.0.0",
+  "name": "eduardo-portfolio",
+  "version": "2.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "postbuild": "node ./scripts/generate-sitemap.mjs",
     "start": "next start",
     "lint": "next lint"
   },
@@ -24,7 +23,6 @@
     "fast-glob": "^3.2.11",
     "feed": "^4.2.2",
     "focus-visible": "^5.2.0",
-    "globby": "^13.1.2",
     "next": "13.0.2",
     "postcss-focus-visible": "^6.0.4",
     "react": "18.2.0",
@@ -37,5 +35,11 @@
     "eslint-config-next": "13.0.2",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.11"
+  },
+  "prettier": {
+    "arrowParens": "always",
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "none"
   }
 }
