--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
@@ -25,6 +26,7 @@
     "focus-visible": "^5.2.0",
     "framer-motion": "^7.6.7",
     "next": "13.0.2",
+    "next-sitemap": "^3.1.32",
     "postcss-focus-visible": "^6.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
