fix: Seo tips 20123

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
+    "@haydenbleasel/command-bar": "^1.0.9",
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
     "@mapbox/rehype-prism": "^0.8.0",
