--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark-gfm": "^3.0.1",
+    "swr": "^2.0.0",
     "tailwindcss": "^3.2.1"
   },
   "devDependencies": {
