--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "postcss-focus-visible": "^6.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-wrap-balancer": "^0.3.0",
     "remark-gfm": "^3.0.1",
     "swr": "^2.0.0",
     "tailwindcss": "^3.2.1"
