--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@haydenbleasel/command-bar": "^1.0.9",
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
-    "@mapbox/rehype-prism": "^0.8.0",
     "@mdx-js/loader": "^2.1.5",
     "@mdx-js/react": "^2.1.5",
     "@next/mdx": "^13.0.2",
@@ -33,6 +32,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-wrap-balancer": "^0.3.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-pretty-code": "^0.9.4",
+    "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
     "swr": "^2.0.0",
     "tailwindcss": "^3.2.1"
