--- a/package.json
+++ b/package.json
@@ -11,39 +11,39 @@
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
-    "@haydenbleasel/command-bar": "^1.0.9",
-    "@headlessui/react": "^1.7.7",
-    "@heroicons/react": "^2.0.13",
-    "@mdx-js/loader": "^2.1.5",
-    "@mdx-js/react": "^2.1.5",
-    "@next/mdx": "^13.0.2",
-    "@tailwindcss/typography": "^0.5.4",
-    "@vercel/analytics": "^0.1.4",
-    "@vercel/og": "^0.0.20",
-    "autoprefixer": "^10.4.12",
+    "@beskar-labs/command-bar": "^2.0.1",
+    "@headlessui/react": "^1.7.12",
+    "@heroicons/react": "^2.0.16",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.2.1",
+    "@tailwindcss/typography": "^0.5.9",
+    "@vercel/analytics": "^0.1.10",
+    "@vercel/og": "^0.2.0",
+    "autoprefixer": "^10.4.13",
     "clsx": "^1.2.1",
-    "fast-glob": "^3.2.11",
+    "fast-glob": "^3.2.12",
     "feed": "^4.2.2",
     "focus-visible": "^5.2.0",
-    "framer-motion": "^7.6.7",
-    "next": "13.0.2",
-    "next-sitemap": "^3.1.32",
-    "postcss-focus-visible": "^6.0.4",
+    "framer-motion": "^10.0.0",
+    "next": "13.2.1",
+    "next-sitemap": "^3.1.54",
+    "postcss-focus-visible": "^8.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-wrap-balancer": "^0.3.0",
+    "react-wrap-balancer": "^0.4.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-pretty-code": "^0.9.4",
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
-    "swr": "^2.0.0",
-    "tailwindcss": "^3.2.1"
+    "swr": "^2.0.4",
+    "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
-    "eslint": "8.26.0",
-    "eslint-config-next": "13.0.2",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.11"
+    "eslint": "8.35.0",
+    "eslint-config-next": "13.2.1",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.3"
   },
   "prettier": {
     "arrowParens": "always",
