--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "feed": "^4.2.2",
     "focus-visible": "^5.2.0",
     "framer-motion": "^10.0.0",
-    "next": "13.0.2",
+    "next": "13.2.1",
     "next-sitemap": "^3.1.54",
     "postcss-focus-visible": "^8.0.2",
     "react": "18.2.0",
@@ -36,6 +36,7 @@
     "rehype-pretty-code": "^0.9.4",
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
+    "sharp": "^0.31.3",
     "swr": "^2.0.4",
     "tailwindcss": "^3.2.7"
   },
