npm updates, refactor code

--- a/package.json
+++ b/package.json
@@ -11,45 +11,39 @@
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
-    "@beskar-labs/command-bar": "^2.0.1",
-    "@headlessui/react": "^1.7.12",
-    "@heroicons/react": "^2.0.16",
-    "@mdx-js/loader": "^2.3.0",
-    "@mdx-js/react": "^2.3.0",
-    "@next/mdx": "^13.2.1",
-    "@tailwindcss/typography": "^0.5.9",
-    "@vercel/analytics": "^0.1.10",
-    "@vercel/og": "^0.2.0",
-    "autoprefixer": "^10.4.13",
-    "clsx": "^1.2.1",
-    "fast-glob": "^3.2.12",
-    "feed": "^4.2.2",
-    "focus-visible": "^5.2.0",
-    "framer-motion": "^10.0.0",
-    "next": "13.2.1",
-    "next-sitemap": "^3.1.54",
-    "postcss-focus-visible": "^8.0.2",
+    "@headlessui/react": "1.7.13",
+    "@heroicons/react": "2.0.16",
+    "@ianvs/prettier-plugin-sort-imports": "^3.7.1",
+    "@mdx-js/loader": "2.3.0",
+    "@mdx-js/react": "2.3.0",
+    "@next/mdx": "13.2.3",
+    "@tailwindcss/typography": "0.5.9",
+    "@vercel/analytics": "0.1.11",
+    "@vercel/og": "0.4.0",
+    "autoprefixer": "10.4.13",
+    "clsx": "1.2.1",
+    "fast-glob": "3.2.12",
+    "feed": "4.2.2",
+    "focus-visible": "5.2.0",
+    "framer-motion": "10.2.3",
+    "next": "13.2.3",
+    "next-sitemap": "4.0.5",
+    "postcss-focus-visible": "8.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-wrap-balancer": "^0.4.0",
-    "rehype-autolink-headings": "^6.1.1",
-    "rehype-pretty-code": "^0.9.4",
-    "rehype-slug": "^5.1.0",
-    "remark-gfm": "^3.0.1",
-    "sharp": "^0.31.3",
-    "swr": "^2.0.4",
+    "react-wrap-balancer": "0.4.0",
+    "rehype-autolink-headings": "6.1.1",
+    "rehype-pretty-code": "0.9.4",
+    "rehype-slug": "5.1.0",
+    "remark-gfm": "3.0.1",
+    "sharp": "0.31.3",
+    "swr": "2.1.0",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
     "eslint": "8.35.0",
-    "eslint-config-next": "13.2.1",
-    "prettier": "^2.8.4",
-    "prettier-plugin-tailwindcss": "^0.2.3"
-  },
-  "prettier": {
-    "arrowParens": "always",
-    "singleQuote": true,
-    "tabWidth": 2,
-    "trailingComma": "none"
+    "eslint-config-next": "13.2.3",
+    "prettier": "2.8.4",
+    "prettier-plugin-tailwindcss": "0.2.4"
   }
 }
