--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mdx-js/loader": "2.3.0",
     "@mdx-js/react": "2.3.0",
     "@next/mdx": "13.2.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "0.5.9",
     "@vercel/analytics": "0.1.11",
     "@vercel/og": "0.4.0",
