--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "framer-motion": "10.2.3",
     "next": "13.2.3",
     "next-sitemap": "4.0.5",
+    "next-themes": "^0.2.1",
     "postcss-focus-visible": "8.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
