--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "remark-gfm": "3.0.1",
     "sharp": "0.31.3",
     "swr": "2.1.0",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "use-debounce": "^9.0.3"
   },
   "devDependencies": {
     "eslint": "8.35.0",
