--- a/package.json
+++ b/package.json
@@ -12,24 +12,23 @@
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
     "@headlessui/react": "1.7.13",
-    "@ianvs/prettier-plugin-sort-imports": "^3.7.1",
+    "@ianvs/prettier-plugin-sort-imports": "3.7.2",
     "@mdx-js/loader": "2.3.0",
     "@mdx-js/react": "2.3.0",
-    "@next/mdx": "13.2.3",
-    "@tailwindcss/line-clamp": "^0.4.2",
+    "@next/mdx": "13.2.4",
     "@tailwindcss/typography": "0.5.9",
     "@vercel/analytics": "0.1.11",
-    "@vercel/og": "0.4.0",
-    "autoprefixer": "10.4.13",
+    "@vercel/og": "0.4.2",
+    "autoprefixer": "10.4.14",
     "clsx": "1.2.1",
     "fast-glob": "3.2.12",
     "feed": "4.2.2",
     "focus-visible": "5.2.0",
-    "framer-motion": "10.2.3",
-    "lucide-react": "^0.125.0",
-    "next": "13.2.3",
-    "next-sitemap": "4.0.5",
-    "next-themes": "^0.2.1",
+    "framer-motion": "10.9.2",
+    "lucide-react": "0.129.0",
+    "next": "13.2.4",
+    "next-sitemap": "4.0.6",
+    "next-themes": "0.2.1",
     "postcss-focus-visible": "8.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -38,15 +37,15 @@
     "rehype-pretty-code": "0.9.4",
     "rehype-slug": "5.1.0",
     "remark-gfm": "3.0.1",
-    "sharp": "0.31.3",
-    "swr": "2.1.0",
-    "tailwindcss": "^3.2.7",
-    "use-debounce": "^9.0.3"
+    "sharp": "0.32.0",
+    "swr": "2.1.1",
+    "use-debounce": "9.0.3"
   },
   "devDependencies": {
-    "eslint": "8.35.0",
-    "eslint-config-next": "13.2.3",
-    "prettier": "2.8.4",
-    "prettier-plugin-tailwindcss": "0.2.4"
+    "eslint": "8.37.0",
+    "eslint-config-next": "13.2.4",
+    "prettier": "2.8.7",
+    "prettier-plugin-tailwindcss": "0.2.5",
+    "tailwindcss": "^3.3.0"
   }
 }
