--- a/package.json
+++ b/package.json
@@ -11,40 +11,40 @@
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
-    "@headlessui/react": "1.7.14",
+    "@headlessui/react": "1.7.13",
     "@ianvs/prettier-plugin-sort-imports": "3.7.2",
     "@mdx-js/loader": "2.3.0",
     "@mdx-js/react": "2.3.0",
-    "@next/mdx": "13.4.0",
+    "@next/mdx": "13.3.0",
     "@tailwindcss/typography": "0.5.9",
-    "@vercel/analytics": "1.0.1",
+    "@vercel/analytics": "0.1.11",
     "autoprefixer": "10.4.14",
     "clsx": "1.2.1",
     "fast-glob": "3.2.12",
     "feed": "4.2.2",
     "focus-visible": "5.2.0",
-    "framer-motion": "10.12.7",
-    "lucide-react": "0.206.0",
-    "next": "^13.4.0",
-    "next-sitemap": "4.0.9",
+    "framer-motion": "10.11.5",
+    "lucide-react": "0.139.0",
+    "next": "13.3.0",
+    "next-sitemap": "4.0.7",
     "next-themes": "0.2.1",
     "postcss-focus-visible": "8.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-wrap-balancer": "0.4.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-wrap-balancer": "0.4.0",
     "rehype-autolink-headings": "6.1.1",
-    "rehype-pretty-code": "0.9.5",
+    "rehype-pretty-code": "0.9.4",
     "rehype-slug": "5.1.0",
     "remark-gfm": "3.0.1",
-    "sharp": "0.32.1",
-    "swr": "2.1.5",
+    "sharp": "0.32.0",
+    "swr": "2.1.3",
     "use-debounce": "9.0.4"
   },
   "devDependencies": {
-    "eslint": "8.39.0",
-    "eslint-config-next": "^13.4.0",
-    "prettier": "2.8.8",
-    "prettier-plugin-tailwindcss": "0.2.8",
-    "tailwindcss": "^3.3.2"
+    "eslint": "8.38.0",
+    "eslint-config-next": "13.3.0",
+    "prettier": "2.8.7",
+    "prettier-plugin-tailwindcss": "0.2.7",
+    "tailwindcss": "^3.3.1"
   }
 }
