--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "eduardo-portfolio",
-  "version": "2.2.0",
+  "version": "3.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postbuild": "next-sitemap"
+    "lint": "next lint"
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
@@ -28,7 +27,6 @@
     "next-contentlayer": "^0.3.2",
     "lucide-react": "0.214.0",
     "next": "^13.4.1",
-    "next-sitemap": "4.0.9",
     "next-themes": "0.2.1",
     "postcss-focus-visible": "8.0.2",
     "react": "^18.2.0",
