--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "@vercel/analytics": "1.0.1",
     "autoprefixer": "10.4.14",
     "clsx": "1.2.1",
+    "contentlayer": "^0.3.2",
     "fast-glob": "3.2.12",
     "feed": "4.2.2",
     "focus-visible": "5.2.0",
     "framer-motion": "10.12.9",
-    "contentlayer": "^0.3.2",
-    "next-contentlayer": "^0.3.2",
     "lucide-react": "0.214.0",
     "next": "^13.4.1",
+    "next-contentlayer": "^0.3.2",
     "next-themes": "0.2.1",
     "postcss-focus-visible": "8.0.2",
     "react": "^18.2.0",
@@ -38,7 +38,8 @@
     "remark-gfm": "3.0.1",
     "sharp": "0.32.1",
     "swr": "2.1.5",
-    "use-debounce": "9.0.4"
+    "use-debounce": "9.0.4",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "eslint": "8.40.0",
