--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "sharp": "0.32.1",
     "sonner": "^0.4.0",
     "swr": "2.1.5",
-    "use-debounce": "9.0.4",
-    "use-sound": "^4.0.1"
+    "use-debounce": "9.0.4"
   },
   "devDependencies": {
     "eslint": "8.40.0",
