--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
     "@mdx-js/loader": "2.3.0",
     "@mdx-js/react": "2.3.0",
     "@next/mdx": "13.4.1",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toggle-group": "^1.0.4",
     "@react-email/components": "0.0.6",
     "@tailwindcss/typography": "0.5.9",
     "@vercel/analytics": "1.0.1",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.6.1",
     "clsx": "1.2.1",
     "contentlayer": "^0.3.2",
     "fast-glob": "3.2.12",
@@ -41,8 +46,8 @@
     "remark-gfm": "3.0.1",
     "resend": "^0.15.1",
     "sharp": "0.32.1",
-    "sonner": "^0.4.0",
     "swr": "2.1.5",
+    "tailwind-merge": "^1.13.2",
     "use-debounce": "9.0.4"
   },
   "devDependencies": {
