--- a/package.json
+++ b/package.json
@@ -12,49 +12,49 @@
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
     "@headlessui/react": "1.7.14",
-    "@ianvs/prettier-plugin-sort-imports": "4.1.0",
+    "@ianvs/prettier-plugin-sort-imports": "3.7.2",
     "@mdx-js/loader": "2.3.0",
     "@mdx-js/react": "2.3.0",
-    "@next/mdx": "13.4.19",
-    "@radix-ui/react-dialog": "^1.0.4",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toggle-group": "^1.0.4",
-    "@react-email/components": "0.0.7",
+    "@next/mdx": "13.4.1",
+    "@radix-ui/react-dialog": "1.0.4",
+    "@radix-ui/react-dropdown-menu": "2.0.5",
+    "@radix-ui/react-tabs": "1.0.4",
+    "@radix-ui/react-toggle-group": "1.0.4",
+    "@react-email/components": "0.0.6",
     "@tailwindcss/typography": "0.5.9",
-    "@vercel/analytics": "1.0.2",
-    "autoprefixer": "10.4.15",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "2.0.0",
-    "contentlayer": "^0.3.4",
-    "fast-glob": "3.3.1",
+    "@vercel/analytics": "1.0.1",
+    "autoprefixer": "10.4.14",
+    "class-variance-authority": "0.6.1",
+    "clsx": "1.2.1",
+    "contentlayer": "0.3.2",
+    "fast-glob": "3.2.12",
     "feed": "4.2.2",
     "focus-visible": "5.2.0",
-    "framer-motion": "10.16.1",
-    "lucide-react": "0.268.0",
-    "next": "^13.4.19",
-    "next-contentlayer": "^0.3.4",
+    "framer-motion": "10.12.9",
+    "lucide-react": "0.214.0",
+    "next": "13.4.1",
+    "next-contentlayer": "0.3.2",
     "next-themes": "0.2.1",
-    "postcss-focus-visible": "9.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-email": "1.9.4",
-    "react-wrap-balancer": "1.1.0",
+    "postcss-focus-visible": "8.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-email": "1.9.3",
+    "react-wrap-balancer": "0.5.0",
     "rehype-autolink-headings": "6.1.1",
-    "rehype-pretty-code": "0.10.0",
+    "rehype-pretty-code": "0.9.5",
     "rehype-slug": "5.1.0",
     "remark-gfm": "3.0.1",
-    "resend": "^1.0.0",
-    "sharp": "0.32.5",
-    "swr": "2.2.1",
-    "tailwind-merge": "^1.14.0",
+    "resend": "0.15.1",
+    "sharp": "0.32.1",
+    "swr": "2.1.5",
+    "tailwind-merge": "1.13.2",
     "use-debounce": "9.0.4"
   },
   "devDependencies": {
-    "eslint": "8.47.0",
-    "eslint-config-next": "^13.4.19",
-    "prettier": "3.0.2",
-    "prettier-plugin-tailwindcss": "0.5.3",
-    "tailwindcss": "^3.3.3"
+    "eslint": "8.40.0",
+    "eslint-config-next": "13.4.1",
+    "prettier": "2.8.8",
+    "prettier-plugin-tailwindcss": "0.2.8",
+    "tailwindcss": "3.3.2"
   }
 }
