--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-dropdown-menu": "2.0.5",
     "@radix-ui/react-tabs": "1.0.4",
     "@radix-ui/react-toggle-group": "1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "@react-email/components": "0.0.6",
     "@tailwindcss/typography": "0.5.9",
     "@vercel/analytics": "1.0.1",
