--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
     "@ianvs/prettier-plugin-sort-imports": "3.7.2",
-    "@mdx-js/loader": "2.3.0",
-    "@mdx-js/react": "2.3.0",
-    "@next/mdx": "13.4.1",
     "@radix-ui/react-dropdown-menu": "2.0.5",
     "@radix-ui/react-tabs": "1.0.4",
     "@radix-ui/react-toggle-group": "1.0.4",
@@ -42,8 +39,9 @@
     "rehype-pretty-code": "0.9.5",
     "rehype-slug": "5.1.0",
     "remark-gfm": "3.0.1",
-    "swr": "2.1.5",
     "sharp": "0.32.1",
+    "shiki": "^0.14.4",
+    "swr": "2.1.5",
     "tailwind-merge": "1.13.2"
   },
   "devDependencies": {
